# oss-funding

./: .gitignore  .replit  README.md  SCF_36_Projects.csv  SCF_37_Projects.csv  SCF_38_Projects.csv  add_missing_to_daoip5.py  convert.py  convert_celo_prezenti_data.py  convert_celopg_to_daoip5.py  create_autoaction_daoip5.py  csv_to_daoip5_converter.py  enhance_grants_pool.py  extract_autoaction.py  extract_missing_projects.py  extract_scf_37.py  extract_scf_38.py  find_scf29_missing.py  funding_data.csv  process_scf_data.py  pyproject.toml  replit.md  requirements.txt  update_stellar_daoip5_metadata.py
archive/: 2024_03_05_arbitrum_foundation.csv  2024_03_17_funding_data.csv  funding_data.csv  funding_data.parquet
attached_assets/: Awarded Submissions [Build only]-By Round (4)_1752568279817.csv  Awarded Submissions [Build only]-By Round (6)_1758108996237.csv  Awarded Submissions [Build only]-By Round (9)_1758459485032.csv  Build Award Rounds-Grid view_1758510369047.csv  Pasted--DAOIP-5-Extensions-Field-Specification-Update-Summary-This-update-introduces-an-optional--1752851869808_1752851869809.txt  Pasted--context-http-www-daostar-org-schemas-name-name-of-the-entity-type-1752851825744_1752851825746.txt  Pasted--daoip-5-title-Grants-Management-description-Data-standards-for-grants-systems-discussions-1752835059343_1752835059344.txt  Prezenti - Mint round data pull (Q4 2024) for Celo PG - Mint - growth_1758510925312.csv  Prezenti - Mint round data pull (Q4 2024) for Celo PG - Mint - micro_1758510930609.csv  Prezenti - Mint round data pull (Q4 2024) for Celo PG - Mint - pilot_1758510928116.csv  scf_35_1758450689274.csv
clean/: 2024_03_05_arbitrum_foundation.csv  2024_03_05_dao_drops.csv  2024_03_05_gitcoin.csv
daoip-5/: README.md
data/: funding_data.csv  funding_data.json
src/: Untitled.ipynb  main.py  validate_csv.py  (+1 more)
(+515 files in other folders)
