[tool.poetry]
name = "oss-funding"
version = "0.1"
description = "Registry of grants and other funding to open source software (OSS) projects"
authors = ["Open Source Observer", "DAOSTAR"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/opensource-observer/oss-funding"
homepage = "https://www.opensource.observer"
documentation = "https://docs.opensource.observer/"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.8,<3.13"
jsonschema = "^4.22.0"
pyoso = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"