[project]
name = "oss-funding"
version = "0.1"
description = "Registry of grants and other funding to open source software (OSS) projects"
authors = [
    { name = "Open Source Observer" },
    { name = "DAOSTAR" },
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "jsonschema>=4.22.0,<5",
    "oss-directory>=0.2.5",
    "pandas>=2.2.3",
    "pyoso>=0.4.0,<0.5",
]

[project.urls]
Homepage = "https://www.opensource.observer"
Repository = "https://github.com/opensource-observer/oss-funding"
Documentation = "https://docs.opensource.observer/"

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
